Fixed z-index position of the autocomplete list

--- a/assets/css/views/_tags.scss
+++ b/assets/css/views/_tags.scss
@@ -43,6 +43,7 @@
   position: absolute;
   user-select: none;
   white-space: nowrap;
+  z-index: 999;
 }
 
 .autocomplete__item {
